frame/support/test/tests/pallet_ui/call_002.stderr
error: Invalid pallet::call, must have at least origin arg
  --> $DIR/call_002.rs:17:3
   |
17 |         fn foo() {}
   |         ^^
